--- a/contacts.html
+++ b/contacts.html
@@ -235,7 +235,7 @@
             },
                 {
                     iconLayout: 'default#image',
-                    iconImageHref: '../img/contacts/map.png',
+                    iconImageHref: './img/contacts/map.png',
                     iconImageSize: [40, 40],
                     iconImageOffset: [-20, -40]
                 });
