--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKAD - Single post</title>
+    <title>AKAD - Post list</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
