--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKAD - Post list</title>
+    <title>AKAD - Single post</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -184,7 +184,7 @@
                                     <li><a href="#" class="aside-posts__link" category="popular">Popular</a></li>
                                     <span class="r"></span>
                                 </ul>
-                                <div class="aside-posts__posts latest fadeIn animated">
+                                <div class="aside-posts__posts aside-posts__posts-active latest fadeIn animated">
                                     <a href="#" class="aside-posts__item">
                                         <div class="aside-posts__img">
                                             <img src="img/blog/aside/img_1.jpg" alt="">
@@ -213,7 +213,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div class="aside-posts__posts popular fadeIn animated">
+                                <div class="aside-posts__posts popular ">
                                     <a href="#" class="aside-posts__item">
                                         <div class="aside-posts__img">
                                             <img src="img/blog/aside/img_1.jpg" alt="">
